--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
 
 <section id="bottom" style="overflow: hidden;">
   <div class="container-fluid d-flex justify-content-center align-item-center footer-container" style="background-color: #9F886B; height: 50px;">
-    <a href="https:instagram.com/nabil___hzs" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
+    <a href="https://instagram.com/nabil___hzs" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nabil-hamzah-ash-shiddiq-193842267" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
-    <a href="mailto:nabilhamzaha@gmail.com" target="_blank" class="icon"><i class="fas fa-envelope"></i></a>
-    <a href="https:wa.me/6282172755847" target="_blank" class="icon"><i class="fab fa-whatsapp"></i></a>
+    <a href="mailto://nabilhamzaha@gmail.com" target="_blank" class="icon"><i class="fas fa-envelope"></i></a>
+    <a href="https://wa.me/6282172755847" target="_blank" class="icon"><i class="fab fa-whatsapp"></i></a>
   </div>
 </section>
 
